--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>9.4.1208</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>1.3.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
