--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>2.53.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-spring</artifactId>
+            <version>1.0-groovy-2.4</version>
+        </dependency>
+
     </dependencies>
 
 
