--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>1.2.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
+
     </dependencies>
 
 
