--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.org.springframework: INFO
+logging.level.org.springframework: DEBUG
 logging.level.org.hibernate: WARN
 logging.level.java.sql: WARN
 
